Fix overlay issue caused by a BGA website update + misc dark mode improvments

--- a/src/css/dark_theme/game.less
+++ b/src/css/dark_theme/game.less
@@ -9,6 +9,7 @@
   --ext-overall-color: transparent;
   --game-palette-bga-link: var(--blue-50);
   --game-palette-bga-blue: var(--blue-50);
+  --game-bga-button-secondary-hover: linear-gradient(180deg, #727272, #777);
 }
 
 :root,
