--- a/src/css/games/harmonies.less
+++ b/src/css/games/harmonies.less
@@ -46,6 +46,11 @@ html[data-theme=dark].bgaext_dark {
 		filter: invert(0.9);
 	}
 
+	.bga-help_popin-button {
+		background-color: #817765;
+		color: #fff;
+	}
+
 	.player-board[data-player-color=ff0000]:before {
 		background-color: #800000;
 	}
